[package]
name = "himalaya-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
directories = "5.0"
indicatif = "0.17"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
